# opentelemetry-collector-snap

./: Makefile  README.md  pyproject.toml
.github/workflows/: promote-snap.yaml  pull-request.yml  release-snap.yaml  update-snap.yaml
snap/: snapcraft.yaml
snap/local/: command-wrapper
tests/integration/: otel_config.yaml  test_integration.py  test_integration.sh
