[project]
name = "opentelemetry-collector-snap"
version = "0.0"                # this is in fact irrelevant
requires-python = "==3.10.*"   # https://packages.ubuntu.com/jammy/python3


[project.optional-dependencies]
dev = [
  "pytest",
  "coverage[toml]",
  "sh",
  "requests",
  "tenacity",
  "black",
  "ruff",
  "codespell",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
log_cli_level = "INFO"
markers = ['setup: marks tests as setup (deselect with -m "not setup")']